        - Some useless extra runs have been removed.
    # A new setting, 'CELL_SIZE', has been added; it allows to limit the size of lists
      (relationships, ManyToMany...) & so avoid some performance issues.
    # The style of the preview table in the header-filter form has been improved.
    # Apps :
        * Documents :
            - You could merge system folders & so, remove them.
        * Emails :
            - There were some issues when the default owner of synchronised emails is a team.
            - A crash when accepting a synchronized email with attachments has been fixed.
        * Reports :
            - An issue with the date range visibility in the export filter popup of a report has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The class 'creme_core.creme_jobs.base.JobType' gets a new attribute: configurable.
          If you set it to 'False', the related job cannot be edited & the value of "enabled" cannot be changed.
        # Javascript:
            * FormDialog:
                - Form submit error responses with HTML can either replace the default overlay content or the frame content.
                - New creme.dialog.Frame option 'fillOnError'; if enabled the html error response replaces the content.
                - New creme.dialog.Dialog option 'fillFrameOnError'; if enabled the html error response replaces the content.

    Breaking changes :
    ------------------
        # The new limit for "<ul>" (render of EntityCells, field-printer or FunctionFieldResult) comes with HTML
          to be slightly different :
            - Empty lists "<ul></ul>" are replaced by an empty string.
            - Lists with one element are not rendered as list anymore.
            - An attribute <class="limited-list"> ahs been added to the <ul> nodes.
          It could make some unit tests to fail.


== Version 2.5.12 ==

  Users side :
  ------------